[project]
name = "applicazioni-ml-inf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "nltk>=3.9.2",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.2.0",
    "xgboost>=3.1.3",
]
